refactor: Update component for new build tools: card (#309)

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -22,6 +22,7 @@
     "@bolt/components-blockquote": "0.2.4",
     "@bolt/components-button": "0.7.0-beta.5",
     "@bolt/components-button-group": "0.2.0",
+    "@bolt/components-card": "0.6.0-beta.5",
     "@bolt/components-chip": "0.2.0",
     "@bolt/components-chip-list": "0.2.0",
     "@bolt/components-color-swatch": "0.9.0",
