--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -33,6 +33,7 @@
     "@bolt/components-page-header": "0.0.3-beta.4",
     "@bolt/components-site": "0.5.0",
     "@bolt/components-smooth-scroll": "0.1.0-beta.4",
+    "@bolt/components-sticky": "0.1.0-beta.4",
     "@bolt/components-teaser": "0.2.0",
     "@bolt/components-unordered-list": "0.1.2",
     "@bolt/core": "0.5.0-beta.1",
