--- a/packages/components/bolt-sticky/package.json
+++ b/packages/components/bolt-sticky/package.json
@@ -1,8 +1,6 @@
 {
   "name": "@bolt/components-sticky",
   "description": "Sticky Component in Bolt",
-  "type": "pattern",
-  "patternType": "molecules",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -37,17 +35,11 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
+  "main": "src/sticky.js",
   "style": "src/sticky.scss",
   "twig": "src/sticky.twig",
   "publishConfig": {
     "access": "public"
-  },
-  "devDependencies": {
-    "@bolt/build-webpack": "^0.5.0-beta.4"
-  },
-  "scripts": {
-    "prepublishOnly": "npm run build",
-    "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/sticky --output-filename='bolt-sticky.min.js' --output-public-path /scripts/"
   },
   "dependencies": {
     "stickybits": "^2.0.13"
