--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -25,6 +25,7 @@
     "@bolt/components-chip": "0.2.0",
     "@bolt/components-chip-list": "0.2.0",
     "@bolt/components-color-swatch": "0.9.0",
+    "@bolt/components-device-viewer": "0.2.0-beta.6",
     "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/components-link": "0.2.1",
     "@bolt/components-nav-bar": "0.1.0-beta.5",
