--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "packages/components/bolt-button-group",
     "packages/components/bolt-chip",
     "packages/components/bolt-chip-list",
+    "packages/components/bolt-device-viewer",
     "packages/components/bolt-figure",
     "packages/components/bolt-link",
     "packages/components/bolt-nav-bar",
