--- a/packages/components/bolt-device-viewer/package.json
+++ b/packages/components/bolt-device-viewer/package.json
@@ -1,8 +1,6 @@
 {
 	"name": "@bolt/components-device-viewer",
 	"description": "Device Viewer Component in Bolt",
-	"type": "pattern",
-	"patternType": "molecules",
 	"keywords": [
 		"bolt design system",
 		"bolt",
@@ -32,26 +30,14 @@
 	"bugs": {
 		"url": "https://github.com/bolt-design-system/bolt/issues"
 	},
-	"main": "dist/bolt-device-viewer.min.js",
-	"module:dev": "src/device-viewer.js",
+	"main": "src/device-viewer.js",
 	"style": "src/_device-viewer.scss",
 	"twig": "src/device-viewer.twig",
 	"publishConfig": {
 		"access": "public"
 	},
-	"devDependencies": {
-		"@bolt/build-webpack": "^0.5.0-beta.4"
-	},
 	"dependencies": {
 		"@bolt/core": "^0.5.0-beta.1",
-		"@bolt/settings-all": "^0.7.4",
-		"@bolt/tools-all": "^0.5.4",
 		"drift-zoom": "^1.2.0"
-	},
-	"scripts": {
-		"prepublishOnly": "npm run build",
-		"build": "npm-run-all --parallel build:*",
-		"build:bolt": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/device-viewer --output-filename='bolt-device-viewer.min.js' --output-public-path /scripts/",
-		"build:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/device-viewer --output-filename='bolt-device-viewer.wwwd8.min.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-device-viewer/dist/"
 	}
 }
