refactor: Attempt to update icons component (#309)
When attempting to build, this fails with the following error:

Module not found: Can't resolve 'fs' in '/Users/dentr1/Sites/bolt/node_modules/fs.realpath'

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -27,6 +27,7 @@
     "@bolt/components-color-swatch": "0.9.0",
     "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/components-icon": "0.4.0-beta.5",
+    "@bolt/components-icons": "0.2.0-beta.3",
     "@bolt/components-link": "0.2.1",
     "@bolt/components-ordered-list": "0.1.4",
     "@bolt/components-page-footer": "0.4.0",
