--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "packages/components/bolt-chip-list",
     "packages/components/bolt-figure",
     "packages/components/bolt-icon",
+    "packages/components/bolt-icons",
     "packages/components/bolt-link",
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-header",
