--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "packages/components/bolt-chip",
     "packages/components/bolt-chip-list",
     "packages/components/bolt-figure",
+    "packages/components/bolt-image",
     "packages/components/bolt-link",
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-header",
