--- a/packages/components/bolt-image/package.json
+++ b/packages/components/bolt-image/package.json
@@ -32,19 +32,13 @@
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
   "style": "src/image.scss",
-  "main": "dist/bolt-image.min.js",
+  "main": "src/image.js",
+  "twig": "src/image.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "^0.7.0-beta.5",
+    "@bolt/core": "0.5.0-beta.1",
     "lazysizes": "^4.0.0-rc4"
-  },
-  "devDependencies": {
-    "@bolt/build-tools": "^0.5.1"
-  },
-  "scripts": {
-    "prepublishOnly": "npm run build",
-    "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/image --output-filename='bolt-image.min.js' --output-public-path /scripts/"
   }
 }
