refactor: Update component for new build tools: logo (#309)

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "packages/components/bolt-figure",
     "packages/components/bolt-image",
     "packages/components/bolt-link",
+    "packages/components/bolt-logo",
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-header",
     "packages/components/bolt-site",
