--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -28,6 +28,7 @@
     "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/components-image": "0.4.0-beta.6",
     "@bolt/components-link": "0.2.1",
+    "@bolt/components-logo": "0.3.0-beta.5",
     "@bolt/components-ordered-list": "0.1.4",
     "@bolt/components-page-footer": "0.4.0",
     "@bolt/components-page-header": "0.0.3-beta.4",
