--- a/packages/components/bolt-logo/package.json
+++ b/packages/components/bolt-logo/package.json
@@ -40,7 +40,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "^0.7.0-beta.5",
-    "@bolt/tools-spacing": "^0.5.0"
+    "@bolt/core": "^0.5.0-beta.1",
+    "@bolt/components-image": "^0.4.0-beta.6"
   }
 }
