--- a/packages/components/bolt-headline/package.json
+++ b/packages/components/bolt-headline/package.json
@@ -22,15 +22,18 @@
     "url": "https://github.com/pega-digital/bolt/issues"
   },
   "style": "src/all-headlines.scss",
-  "twig": "h1.twig",
+  "twig": [
+    "_typography.twig",
+    "eyebrow.twig",
+    "headline.twig",
+    "lead.twig",
+    "subheadline.twig",
+    "text.twig"
+  ],
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-font-family": "^0.5.2",
-    "@bolt/tools-font-size": "^0.5.4",
-    "@bolt/tools-font-weight": "^0.5.3",
-    "@bolt/tools-spacing": "^0.5.0",
-    "@bolt/tools-uppercase": "^0.2.0"
+    "@bolt/core": "^0.5.0-beta.1"
   }
 }
