--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -35,12 +35,14 @@
     "clean-css-loader": "^0.1.4",
     "commander": "^2.12.2",
     "css-loader": "^0.28.7",
+    "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "js-yaml": "^3.10.0",
     "jsonschema": "^1.2.2",
     "lodash.debounce": "^4.0.8",
     "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
+    "ora": "^1.3.0",
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-loader": "^2.0.10",
     "sass-loader": "^6.0.6",
