Adding npm run commands

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "build": "bolt build",
     "build:noisy": "bolt build --verbosity 5",
-    "start": "bolt build && bolt build --watch"
+    "serve": "bolt serve",
+    "watch": "bolt watch",
+    "start": "bolt start"
   },
   "repository": {
     "type": "git",
