#309 update image and logo components (#345)
* refactor: Update component for new build tools: image (#309)

* refactor: Remove unused gcd twig file (#309)

* refactor: Update component for new build tools: logo (#309)

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -26,7 +26,9 @@
     "@bolt/components-chip-list": "0.2.0",
     "@bolt/components-color-swatch": "0.9.0",
     "@bolt/components-figure": "0.2.0-beta.2",
+    "@bolt/components-image": "0.4.0-beta.6",
     "@bolt/components-link": "0.2.1",
+    "@bolt/components-logo": "0.3.0-beta.5",
     "@bolt/components-ordered-list": "0.1.4",
     "@bolt/components-page-footer": "0.4.0",
     "@bolt/components-page-header": "0.0.3-beta.4",
