--- a/package.json
+++ b/package.json
@@ -95,7 +95,9 @@
     "packages/components/bolt-chip",
     "packages/components/bolt-chip-list",
     "packages/components/bolt-figure",
+    "packages/components/bolt-image",
     "packages/components/bolt-link",
+    "packages/components/bolt-logo",
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-header",
     "packages/components/bolt-site",
