Setting up Netlify deploy

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "Xpublish:canary": "lerna publish --canary --npm-tag=next",
     "start": "cd apps/pattern-lab--workshop && npm start",
     "Xpre-build": "lerna exec -- npm run --if-present build",
-    "Xbuild": "export NODE_ENV=production && npm run pre-build && gulp build",
+    "build": "export NODE_ENV=production && cd apps/pattern-lab--workshop && npm run build",
     "Xbuild:full": "export NODE_ENV=production && npm run pre-build && gulp build:full",
     "setup": "npm run bootstrap && npm run composer:setup",
     "composer:setup": "if [ ! -f ./apps/pattern-lab--workshop/www/index.html ]; then npm run composer:clean && npm run composer:install; fi",
-    "composer:install": "composer install -d apps/pattern-lab--workshop --prefer-source --no-interaction --no-dev",
+    "composer:install": "./scripts/composer-install.sh",
     "composer:clean": "rm -rf apps/pattern-lab--workshop/composer.lock && rm -rf apps/pattern-lab--workshop/vendor && rm -rf apps/pattern-lab--workshop/src/_twig-components",
     "Xtest:travis": "yarn pretest && yarn lint",
     "Xtest:lighthouse": "concurrently --kill-others \"http-server dist\" \"lighthouse --view http://localhost:8080\" ",
