refactor: adding back in config presets for stylelint, eslint, browserslist, etc

--- a/package.json
+++ b/package.json
@@ -105,6 +105,9 @@
     "packages/global",
     "packages/build-tools",
     "packages/config-presets/babel-preset-bolt",
+    "packages/config-presets/config-browserlist",
+    "packages/config-presets/config-eslint",
+    "packages/config-presets/config-stylelint",
     "apps/*"
   ]
 }
