refactor: adding in headline component -- needed for in progress docs work

--- a/packages/components/bolt-headline/package.json
+++ b/packages/components/bolt-headline/package.json
@@ -23,6 +23,7 @@
   },
   "style": "src/all-headlines.scss",
   "twig": "h1.twig",
+  "style": "src/headline.scss",
   "publishConfig": {
     "access": "public"
   },
