--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "packages/components/bolt-chip-list",
     "packages/components/bolt-figure",
     "packages/components/bolt-link",
+    "packages/components/bolt-headline",
     "packages/components/bolt-ordered-list",
     "packages/components/bolt-page-header",
     "packages/components/bolt-site",
