Setting up Travis to deploy to Netlify

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bootstrap": "lerna bootstrap --reject-cycles",
     "postbootstrap": "node scripts/monorepo-tests.js",
     "clean:git": "git clean -xdf",
-    "deploy": "netlify deploy -s bolt.netlify.com -p apps/pattern-lab--workshop/www",
+    "deploy": "./scripts/deploy.sh",
     "Xlint:js": "eslint ./build-tools",
     "Xlint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
@@ -26,13 +26,12 @@
     "Xbuild:full": "export NODE_ENV=production && npm run pre-build && gulp build:full",
     "setup": "npm run bootstrap && npm run composer:setup",
     "composer:setup": "if [ ! -f ./apps/pattern-lab--workshop/www/index.html ]; then npm run composer:clean && npm run composer:install; fi",
-    "composer:install": "./scripts/composer-install.sh",
+    "composer:install": "composer install -d apps/pattern-lab--workshop --prefer-source --no-interaction --no-dev",
     "composer:clean": "rm -rf apps/pattern-lab--workshop/composer.lock && rm -rf apps/pattern-lab--workshop/vendor && rm -rf apps/pattern-lab--workshop/src/_twig-components",
     "Xtest:travis": "yarn pretest && yarn lint",
     "Xtest:lighthouse": "concurrently --kill-others \"http-server dist\" \"lighthouse --view http://localhost:8080\" ",
     "Xtest:full": "yarn lint:scss && polymer test && yarn test:lighthouse && yarn lint:remark && npm run mocha",
     "Xtest": "npm run mocha",
-    "build:pl": "export NODE_ENV=production && cd apps/pattern-lab--workshop && npm run build",
     "Xtest:ci": "node browserstack.js",
     "Xpretest": "node packages/build-tools/check-imports.js",
     "Xprecommit": "npm run lint:scss",
