--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ addons:
     - graphicsmagick
 
 before_install:
-- nvm install 8 # or 5, 6, or whatever
-- node --version && npm --version && composer --version
+- nvm install 8.9.0 # or 5, 6, or whatever
+# yarn install
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
+- export PATH="$HOME/.yarn/bin:$PATH"
+- node --version && npm --version && yarn --version && composer --version
 - composer global require hirak/prestissimo
 - if [[ -n "$GITHUB_TOKEN" ]]; then composer config -g github-oauth.github.com ${GITHUB_TOKEN};
   fi;
@@ -21,7 +24,7 @@ before_script:
 - phpenv config-rm xdebug.ini
 
 install:
-- npm install && npm run setup
+- yarn install && npm run setup
 
 script:
 - travis_wait npm run build && npm run deploy
@@ -29,6 +32,7 @@ script:
 
 cache:
   apt: true
+  yarn: true
 
 notifications:
   email:
