--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
     - graphicsmagick
 
 before_install:
-- nvm install 8.9.0 # or 5, 6, or whatever
+- nvm install # version lifted from `.nvmrc`
 # yarn install
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
 - export PATH="$HOME/.yarn/bin:$PATH"
