--- a/package.json
+++ b/package.json
@@ -79,8 +79,9 @@
     "husky": "^0.14.3",
     "lerna": "^2.5.1",
     "lighthouse": "^2.5.0",
-    "web-component-tester": "^6.3.0",
-    "npm-run-all": "^4.1.2"
+    "netlify-cli": "^1.2.2",
+    "npm-run-all": "^4.1.2",
+    "web-component-tester": "^6.3.0"
   },
   "workspaces": [
     "packages/components/background-shapes",
