--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -34,6 +34,7 @@
     "chokidar": "^2.0.0",
     "clean-css-loader": "^0.1.4",
     "commander": "^2.12.2",
+    "convert-hrtime": "^2.0.0",
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -45,6 +46,7 @@
     "ora": "^1.3.0",
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-loader": "^2.0.10",
+    "pretty-ms": "^3.1.0",
     "sass-loader": "^6.0.6",
     "semver": "^5.4.1",
     "style-loader": "^0.19.1",
