--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ addons:
     - graphicsmagick
 
 before_install:
-- nvm install 8 # or 5, 6, or whatever
-- node --version && npm --version && composer --version
+- nvm install # version lifted from `.nvmrc`
+# yarn install
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.3.2
+- export PATH="$HOME/.yarn/bin:$PATH"
+- node --version && npm --version && yarn --version && composer --version
 - composer global require hirak/prestissimo
 - if [[ -n "$GITHUB_TOKEN" ]]; then composer config -g github-oauth.github.com ${GITHUB_TOKEN};
   fi;
@@ -21,14 +24,15 @@ before_script:
 - phpenv config-rm xdebug.ini
 
 install:
-- npm install && npm run setup
+- yarn install && npm run setup
 
 script:
-- npm run build:pl
+- travis_wait npm run build && npm run deploy
 #- travis_wait npm run build && npm run deploy # only run deploy if build is successful. Can't do `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 
 cache:
   apt: true
+  yarn: true
 
 notifications:
   email:
