chore: add 3 new icons to Bolt + fresh build; updating manifest file auto-generated

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -535,6 +535,10 @@ table:
   filename: table.twig
   path: src/_patterns/01-core/04-elements/elements-tables/table.twig
   namespace: '@bolt/table.twig'
+tall_video_band_poc:
+  filename: tall-video-band-poc.twig
+  path: src/_patterns/04-pages/tall-video-band-poc.twig
+  namespace: '@bolt/tall-video-band-poc.twig'
 teaser:
   filename: teaser.twig
   path: src/_patterns/02-components/bolt-teaser/src/teaser.twig
@@ -601,6 +605,10 @@ video__external_controls:
   filename: video--external-controls.twig
   path: src/_patterns/02-components/bolt-video/demo/video--external-controls.twig
   namespace: '@bolt/video--external-controls.twig'
+video__hide_meta:
+  filename: video--hide-meta.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--hide-meta.twig
+  namespace: '@bolt/video--hide-meta.twig'
 video__inline_script:
   filename: video--inline-script.twig
   path: src/_patterns/02-components/bolt-video/demo/video--inline-script.twig
@@ -610,6 +618,18 @@ video__inline_script_with_external_controls:
   path: >-
     src/_patterns/02-components/bolt-video/demo/video--inline-script-with-external-controls.twig
   namespace: '@bolt/video--inline-script-with-external-controls.twig'
+video__show_meta:
+  filename: video--show-meta.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--show-meta.twig
+  namespace: '@bolt/video--show-meta.twig'
+video__show_meta_and_title:
+  filename: video--show-meta-and-title.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--show-meta-and-title.twig
+  namespace: '@bolt/video--show-meta-and-title.twig'
+video__show_meta_hide_title:
+  filename: video--show-meta-hide-title.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--show-meta-hide-title.twig
+  namespace: '@bolt/video--show-meta-hide-title.twig'
 video_background:
   filename: video-background.twig
   path: src/_patterns/02-components/bolt-video/demo/video-background.twig
