--- a/packages/components/bolt-button-group/package.json
+++ b/packages/components/bolt-button-group/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
   "style": "src/button-group.scss",
-  "twig": "button-group.twig",
+  "twig": "src/button-group.twig",
   "publishConfig": {
     "access": "public"
   },
