--- a/src/_patterns/02-components/bolt-forms/package.json
+++ b/src/_patterns/02-components/bolt-forms/package.json
@@ -19,8 +19,13 @@
     "url": "https://github.com/pega-digital/bolt/issues"
   },
   "style": "src/forms.scss",
+  "main": "src/form.js",
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/form --output-filename='bolt-form.min.js' --output-public-path /scripts/"
+  }
 }
