--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -41,6 +41,7 @@
     "js-yaml": "^3.10.0",
     "jsonschema": "^1.2.2",
     "lodash.debounce": "^4.0.8",
+    "mkdirp": "^0.5.1",
     "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
     "ora": "^1.3.0",
