Adding Bolt Band to PL. Fixing Sass.

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -21,6 +21,7 @@
     "@bolt/components-action-blocks": "0.3.0",
     "@bolt/components-background": "0.3.0-beta.2",
     "@bolt/components-background-shapes": "0.1.0-beta.2",
+    "@bolt/components-band": "0.6.0-beta.5",
     "@bolt/components-blockquote": "0.2.4",
     "@bolt/components-button": "0.7.0-beta.5",
     "@bolt/components-button-group": "0.2.0",
