--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "packages/components/page-footer",
     "packages/components/bolt-action-blocks",
     "packages/components/bolt-background",
+    "packages/components/bolt-band",
     "packages/components/bolt-blockquote",
     "packages/components/bolt-button-group",
     "packages/components/bolt-card",
