Adding twig entries to color-swatch

--- a/packages/components/color-swatch/package.json
+++ b/packages/components/color-swatch/package.json
@@ -6,5 +6,6 @@
   "publishConfig": {
     "access": "public"
   },
-  "style": "_color-swatch.scss"
+  "style": "_color-swatch.scss",
+  "twig": ["_color-swatch.twig"]
 }
