--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -4,6 +4,9 @@
   "version": "0.5.0",
   "license": "MIT",
   "style": "styles/index.scss",
+  "twig": [
+    "styles/05-objects/objects-wrapper/wrapper.twig"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/bolt-design-system/bolt"
