--- a/src/_patterns/02-components/bolt-forms/package.json
+++ b/src/_patterns/02-components/bolt-forms/package.json
@@ -19,13 +19,16 @@
     "url": "https://github.com/pega-digital/bolt/issues"
   },
   "style": "src/forms.scss",
-  "main": "src/form.js",
+  "main": "dist/bolt-form.min.js",
+  "module:dev": "src/form.js",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {},
   "scripts": {
     "prepublishOnly": "npm run build",
-    "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/form --output-filename='bolt-form.min.js' --output-public-path /scripts/"
+    "build": "npm-run-all --parallel build:*",
+    "build:bolt": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/form --output-filename='bolt-form.min.js' --output-public-path /scripts/",
+    "build:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/form --output-filename='bolt-form.wwwd8.min.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-form/dist/"
   }
 }
