Adding bolt manifest

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -507,6 +507,11 @@ smooth_scroll_demo:
   filename: smooth-scroll.demo.twig
   path: src/_patterns/02-components/bolt-smooth-scroll/demo/smooth-scroll.demo.twig
   namespace: '@bolt/smooth-scroll.demo.twig'
+smooth_scroll_xl_demo:
+  filename: '-smooth-scroll-xl.demo.twig'
+  path: >-
+    src/_patterns/02-components/bolt-smooth-scroll/demo/-smooth-scroll-xl.demo.twig
+  namespace: '@bolt/-smooth-scroll-xl.demo.twig'
 speaker:
   filename: _speaker.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_speaker.twig
