Adding Netlify deploy script that only deploys to main site on main branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
 # - npm run deploy
 
 after_success:
-- netlify deploy -s bolt.netlify.com -t ${NETLIFY_TOKEN} -p dist
+- ./deploy.sh
 
 cache:
   apt: true
