Adding Bolt Icon(s)

--- a/package.json
+++ b/package.json
@@ -97,6 +97,8 @@
     "packages/components/bolt-chip",
     "packages/components/bolt-chip-list",
     "packages/components/bolt-figure",
+    "packages/components/bolt-icon",
+    "packages/components/bolt-icons",
     "packages/components/bolt-image",
     "packages/components/bolt-link",
     "packages/components/bolt-headline",
