--- a/src/_patterns/02-components/bolt-nav-bar/package.json
+++ b/src/_patterns/02-components/bolt-nav-bar/package.json
@@ -46,6 +46,7 @@
     "@bolt/core": "^0.9.1",
     "@bolt/settings-all": "^0.9.0",
     "@bolt/tools-all": "^0.9.0",
+    "gumshoejs": "^3.5.0",
     "npm-run-all": "^4.0.2"
   },
   "scripts": {
