--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -222,6 +222,14 @@ d8_product_t2:
   filename: d8-product-t2.twig
   path: src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
   namespace: '@bolt/d8-product-t2.twig'
+d8_product_t3:
+  filename: d8-product-t3.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-t3.twig
+  namespace: '@bolt/d8-product-t3.twig'
+d8_product_t4:
+  filename: d8-product-t4.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-t4.twig
+  namespace: '@bolt/d8-product-t4.twig'
 d8_resource_details:
   filename: d8-resource-details.twig
   path: src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
