chore: creating search kitchen sink

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -214,18 +214,26 @@ d8_homepage_video_test:
   filename: d8-homepage-video-test.twig
   path: src/_patterns/04-pages/d8-homepage/d8-homepage-video-test.twig
   namespace: '@bolt/d8-homepage-video-test.twig'
-d8_press_browse:
-  filename: d8-press-browse.twig
-  path: src/_patterns/04-pages/d8-press/d8-press-browse.twig
-  namespace: '@bolt/d8-press-browse.twig'
+d8_media_browse__list_view:
+  filename: d8-media-browse--list-view.twig
+  path: src/_patterns/04-pages/d8-news/d8-media-browse--list-view.twig
+  namespace: '@bolt/d8-media-browse--list-view.twig'
+d8_news_landing:
+  filename: d8-news-landing.twig
+  path: src/_patterns/04-pages/d8-news/d8-news-landing.twig
+  namespace: '@bolt/d8-news-landing.twig'
+d8_press_browse__grid_view:
+  filename: d8-press-browse--grid-view.twig
+  path: src/_patterns/04-pages/d8-news/d8-press-browse--grid-view.twig
+  namespace: '@bolt/d8-press-browse--grid-view.twig'
+d8_press_browse__list_view:
+  filename: d8-press-browse--list-view.twig
+  path: src/_patterns/04-pages/d8-news/d8-press-browse--list-view.twig
+  namespace: '@bolt/d8-press-browse--list-view.twig'
 d8_press_details:
   filename: d8-press-details.twig
-  path: src/_patterns/04-pages/d8-press/d8-press-details.twig
+  path: src/_patterns/04-pages/d8-news/d8-press-details.twig
   namespace: '@bolt/d8-press-details.twig'
-d8_press_landing:
-  filename: d8-press-landing.twig
-  path: src/_patterns/04-pages/d8-press/d8-press-landing.twig
-  namespace: '@bolt/d8-press-landing.twig'
 d8_product_landing:
   filename: d8-product-landing.twig
   path: src/_patterns/04-pages/d8-product-landing/d8-product-landing.twig
@@ -238,6 +246,10 @@ d8_resource_details:
   filename: d8-resource-details.twig
   path: src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
   namespace: '@bolt/d8-resource-details.twig'
+d8_search:
+  filename: d8-search.twig
+  path: src/_patterns/04-pages/d8-news/d8-search.twig
+  namespace: '@bolt/d8-search.twig'
 default_template:
   filename: default-template.twig
   path: src/_patterns/03-templates/default/default-template.twig
