Adding Device Viewer component

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "packages/components/bolt-card",
     "packages/components/bolt-chip",
     "packages/components/bolt-chip-list",
+    "packages/components/bolt-device-viewer",
     "packages/components/bolt-figure",
     "packages/components/bolt-icon",
     "packages/components/bolt-icons",
