--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -29,6 +29,7 @@
     "@bolt/components-chip": "0.2.0",
     "@bolt/components-chip-list": "0.2.0",
     "@bolt/components-color-swatch": "0.9.0",
+    "@bolt/components-device-viewer": "0.2.0-beta.6",
     "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/components-icon": "0.4.0-beta.5",
     "@bolt/components-image": "0.4.0-beta.6",
