--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha:settings": "mocha **/settings-*/tests/*.test.js",
     "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
     "deploy:netlify": "./deploy.sh",
+    "deploy:staging": "./deploy-staging.sh",
     "publish": "lerna publish",
     "publish:canary": "lerna publish --canary --npm-tag=next",
     "start": "gulp",
