chore: demo update

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -198,6 +198,10 @@ crop:
   filename: crop.twig
   path: src/_patterns/01-core/05-objects/bolt-crop-object/src/crop.twig
   namespace: '@bolt/crop.twig'
+d8_breadcrumbs:
+  filename: d8-breadcrumbs.twig
+  path: src/_patterns/04-pages/d8-campaign-landing/d8-breadcrumbs.twig
+  namespace: '@bolt/d8-breadcrumbs.twig'
 d8_homepage:
   filename: d8-homepage.twig
   path: src/_patterns/04-pages/d8-homepage/d8-homepage.twig
@@ -222,6 +226,14 @@ d8_product_t2:
   filename: d8-product-t2.twig
   path: src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
   namespace: '@bolt/d8-product-t2.twig'
+d8_product_t3:
+  filename: d8-product-t3.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-t3.twig
+  namespace: '@bolt/d8-product-t3.twig'
+d8_product_t4:
+  filename: d8-product-t4.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-t4.twig
+  namespace: '@bolt/d8-product-t4.twig'
 d8_resource_details:
   filename: d8-resource-details.twig
   path: src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
