--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -15,7 +15,7 @@
     "@bolt/components-card": "^0.9.1",
     "@bolt/components-critical-fonts": "^0.9.0",
     "@bolt/components-device-viewer": "^0.9.1",
-    "@bolt/components-forms": "0.0.0",
+    "@bolt/components-form": "0.0.0",
     "@bolt/components-icon": "^0.9.1",
     "@bolt/components-image": "^0.9.1",
     "@bolt/components-nav-bar": "^0.9.1",
