--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "globby": "^7.1.1",
     "js-yaml": "^3.10.0",
     "jsonschema": "^1.2.2",
     "lodash.debounce": "^4.0.8",
