Setting up Ordered List Component Demo & Schema.
Co-authored-by: Evan Lovely <evanlovely@gmail.com>

--- a/packages/components/bolt-ordered-list/package.json
+++ b/packages/components/bolt-ordered-list/package.json
@@ -30,8 +30,7 @@
 	"bugs": {
 		"url": "https://github.com/bolt-design-system/bolt/issues"
 	},
-	"style": "src/ordered-list.scss",
-	"twig": "src/ordered-list.twig",
+	"style": "ordered-list.scss",
 	"publishConfig": {
 		"access": "public"
 	},
