--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -51,6 +51,7 @@
     "pretty-ms": "^3.1.0",
     "sass-loader": "^6.0.6",
     "semver": "^5.4.1",
+    "sharp": "^0.19.0",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0",
