WIP: testing updates

--- a/build-tools/gulp-tasks/package.json
+++ b/build-tools/gulp-tasks/package.json
@@ -23,6 +23,8 @@
     }
   ],
   "dependencies": {
+    "penthouse": "^1.4.0",
+    "apartment": "^1.1.1",
     "@bolt/build-core": "^0.9.0",
     "@bolt/build-images": "^0.9.0",
     "@bolt/build-patternlab": "^0.9.0",
