--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,10 @@
   "lerna": "2.5.1",
   "version": "0.9.5",
   "packages": [
-    "packages/**",
+    "packages/bolt",
+    "packages/bolt-config-presets/**",
+    "packages/bolt-twig-extensions",
+    "packages/bolt-core",
     "src/fonts",
     "src/_data",
     "src",
