styles: adding breadcrumb component

--- a/config/config.yml
+++ b/config/config.yml
@@ -91,6 +91,7 @@ plugins:
           - src/_patterns/02-components/bolt-band/src
           - src/_patterns/02-components/bolt-blockquote/demo/theming
           - src/_patterns/02-components/bolt-blockquote/src
+          - src/_patterns/02-components/bolt-breadcrumb/src
           - src/_patterns/02-components/bolt-button-group/src
           - src/_patterns/02-components/bolt-button/demos
           - src/_patterns/02-components/bolt-button/src
