--- a/src/_patterns/02-components/components-all/package.json
+++ b/src/_patterns/02-components/components-all/package.json
@@ -63,6 +63,7 @@
     "@bolt/components-sticky": "^0.9.0",
     "@bolt/components-teaser": "^0.9.0",
     "@bolt/components-unordered-list": "^0.9.0",
-    "@bolt/components-video": "^0.9.5"
+    "@bolt/components-video": "^0.9.5",
+    "@bolt/components-breadcrumb": "^0.0.0"
   }
 }
