--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -137,6 +137,10 @@ brand_colors:
   filename: 01-brand-colors.twig
   path: src/_patterns/01-core/02-tools/tools-spacing/demos/01-brand-colors.twig
   namespace: '@bolt/01-brand-colors.twig'
+breadcrumb:
+  filename: breadcrumb.twig
+  path: src/_patterns/02-components/bolt-breadcrumb/src/breadcrumb.twig
+  namespace: '@bolt/breadcrumb.twig'
 brightcove_player:
   filename: brightcove-player.twig
   path: src/_patterns/02-components/brightcove-player/src/brightcove-player.twig
