test: testing latest

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -222,6 +222,18 @@ d8_product_t2:
   filename: d8-product-t2.twig
   path: src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
   namespace: '@bolt/d8-product-t2.twig'
+d8_product_t3:
+  filename: d8-product-t3.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-t3.twig
+  namespace: '@bolt/d8-product-t3.twig'
+d8_product_t3_extra_videos:
+  filename: d8-product-t3-extra-videos.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-t3-extra-videos.twig
+  namespace: '@bolt/d8-product-t3-extra-videos.twig'
+d8_product_t4:
+  filename: d8-product-t4.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-t4.twig
+  namespace: '@bolt/d8-product-t4.twig'
 d8_resource_details:
   filename: d8-resource-details.twig
   path: src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
@@ -536,6 +548,18 @@ subheadline:
   filename: subheadline.twig
   path: src/_patterns/02-components/bolt-headline/src/subheadline.twig
   namespace: '@bolt/subheadline.twig'
+t2_d8_after:
+  filename: t2-d8-after.twig
+  path: src/_patterns/04-pages/t2-d8-after.twig
+  namespace: '@bolt/t2-d8-after.twig'
+t2_d8_after_fewer_videos:
+  filename: t2-d8-after-fewer-videos.twig
+  path: src/_patterns/04-pages/t2-d8-after-fewer-videos.twig
+  namespace: '@bolt/t2-d8-after-fewer-videos.twig'
+t2_d8_before:
+  filename: t2-d8-before.twig
+  path: src/_patterns/04-pages/t2-d8-before.twig
+  namespace: '@bolt/t2-d8-before.twig'
 table:
   filename: table.twig
   path: src/_patterns/01-core/04-elements/elements-tables/table.twig
