--- a/build-tools/gulp-tasks/package.json
+++ b/build-tools/gulp-tasks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-tools",
-  "version": "0.9.0",
+  "version": "0.9.6",
   "license": "MIT",
   "description": "Curated collection of front-end build tools in the Bolt Design System.",
   "main": "index.js",
@@ -23,8 +23,6 @@
     }
   ],
   "dependencies": {
-    "penthouse": "^1.4.0",
-    "apartment": "^1.1.1",
     "@bolt/build-core": "^0.9.0",
     "@bolt/build-images": "^0.9.0",
     "@bolt/build-patternlab": "^0.9.0",
@@ -33,11 +31,13 @@
     "@bolt/build-styles": "^0.9.0",
     "@bolt/build-symlinks": "^0.9.0",
     "@bolt/build-webpack": "^0.9.0",
+    "apartment": "^1.1.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-cached": "^1.1.1",
     "gulp-changed": "^3.1.0",
     "gulp-changed-in-place": "^2.2.0",
-    "gulp-remember": "^0.3.1"
+    "gulp-remember": "^0.3.1",
+    "penthouse": "^1.4.0"
   },
   "publishConfig": {
     "access": "public"
