--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -38,10 +38,12 @@
     "css-loader": "^0.28.7",
     "del": "^3.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "front-matter": "^2.3.0",
     "globby": "^7.1.1",
     "js-yaml": "^3.10.0",
     "jsonschema": "^1.2.2",
     "lodash.debounce": "^4.0.8",
+    "marked": "^0.3.12",
     "mkdirp": "^0.5.1",
     "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
