chore: add demo of navbar component being used with existing page header component

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -153,6 +153,10 @@ button_group:
   filename: button-group.twig
   path: src/_patterns/02-components/bolt-button-group/src/button-group.twig
   namespace: '@bolt/button-group.twig'
+button_perf_test:
+  filename: button-perf-test.twig
+  path: src/_patterns/04-pages/button-perf-test.twig
+  namespace: '@bolt/button-perf-test.twig'
 camera:
   filename: _camera.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_camera.twig
