chore: merging in latest from release/0.x branch

--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/core",
   "description": "Core dependencies, utils, etc.",
-  "version": "0.9.1",
+  "version": "0.9.6",
   "license": "MIT",
   "main": "index.js",
   "repository": {
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "@bolt/core-data": "^0.9.0",
-    "@webcomponents/custom-elements": "^1.0.6",
-    "@webcomponents/html-imports": "^1.1.0",
-    "@webcomponents/shadycss": "^1.1.0",
-    "@webcomponents/shadydom": "^1.0.11",
+    "@webcomponents/custom-elements": "^1.0.8",
+    "@webcomponents/html-imports": "^1.1.1",
+    "@webcomponents/shadycss": "^1.1.1",
+    "@webcomponents/shadydom": "^1.0.12",
     "@webcomponents/template": "^1.2.2",
     "@webcomponents/webcomponents-platform": "^1.0.0",
-    "@webcomponents/webcomponentsjs": "^1.0.22",
+    "@webcomponents/webcomponentsjs": "^1.1.0",
     "core-js": "^2.5.1",
+    "document-register-element": "^1.7.2",
     "es6-promise": "^4.1.1",
-    "preact": "^8.2.5",
-    "skatejs": "^5.0.0-beta.4",
+    "preact": "^8.2.7",
+    "skatejs": "^5.1.1",
     "yocss": "^0.5.1"
   }
 }
