--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ addons:
     - graphicsmagick
 
 before_install:
+- echo "Showing some Travis Env Vars"
+- echo "TRAVIS_BRANCH - $TRAVIS_BRANCH" && echo "TRAVIS_PULL_REQUEST - $TRAVIS_PULL_REQUEST"
 - nvm install 8 # or 5, 6, or whatever
 - node --version && npm --version && composer --version
 - npm install netlify-cli -g
@@ -26,11 +28,7 @@ install:
 
 script:
 - npm run test
-- travis_wait npm run build #only run deploy if build is successful. Can't do `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
-# - npm run deploy
-
-after_success:
-- netlify deploy -s bolt.netlify.com -t ${NETLIFY_TOKEN} -p dist
+- travis_wait npm run build && npm i -g netlify-cli && npm run deploy:netlify # only run deploy if build is successful. Can't do `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 
 cache:
   apt: true
