--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,11 @@
 {
   "lerna": "2.5.1",
-  "version": "0.9.5",
+  "version": "0.9.8",
   "packages": [
-    "packages/**",
+    "packages/bolt",
+    "packages/bolt-config-presets/**",
+    "packages/bolt-twig-extensions",
+    "packages/bolt-core",
     "src/fonts",
     "src/_data",
     "src",
