--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "mocha:build-tools": "mocha ./build-tools/**/tests/*.test.js",
     "mocha:settings": "mocha **/settings-*/tests/*.test.js",
     "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
-    "deploy:netlify": "netlify deploy -s bolt.netlify.com -p dist",
+    "deploy:netlify": "./deploy.sh",
+    "deploy:staging": "./deploy-staging.sh",
     "publish": "lerna publish",
     "publish:canary": "lerna publish --canary --npm-tag=next",
     "start": "gulp",
     "pre-build": "lerna exec -- npm run --if-present build",
     "build": "NODE_ENV=production npm run pre-build && NODE_ENV=production gulp build",
+    "build:quick": "NODE_ENV=production gulp build",
     "build:full": "NODE_ENV=production npm run pre-build && NODE_ENV=production gulp build:full",
     "setup": "npm run bootstrap && npm run composer:setup",
     "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run clean:composer && npm run composer:install; fi",
@@ -97,7 +99,7 @@
     "cz-conventional-changelog": "^2.0.0",
     "cz-lerna-changelog": "^1.2.1",
     "desvg-loader": "^0.1.0",
-    "document-register-element": "^1.7.0",
+    "document-register-element": "^1.7.2",
     "es6-promise": "^4.1.1",
     "es6-symbol": "^3.1.1",
     "eslint": "^4.5.0",
