--- a/src/_patterns/02-components/bolt-forms/package.json
+++ b/src/_patterns/02-components/bolt-forms/package.json
@@ -25,7 +25,6 @@
   },
   "dependencies": {},
   "scripts": {
-    "prepublishOnly": "npm run build",
-    "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/form --output-filename='bolt-form.min.js' --output-public-path /scripts/"
+    "prepublishOnly": "npm run build"
   }
 }
