Upgrading to new Pattern Lab Twig Engine	(custom released for Pega). Using community Drupal Twig Extensions and pruning in-house versions.

--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -49,6 +49,8 @@ lineageMatch: >-
   |\()[&quot;\&#039;]([\/.@A-Za-z0-9-_]+)[&quot;\&#039;]([\s\S+]*?)%}
 lineageMatchKey: 3
 patternExtension: twig
+twigExtensions:
+    - '\PatternLab\DrupalTwigExtensions\Basic'
 twigDebug: true
 twigAutoescape: false
 twigDefaultDateFormat: ''
