--- a/apps/pattern-lab--workshop/composer.json
+++ b/apps/pattern-lab--workshop/composer.json
@@ -40,6 +40,10 @@
       },
       {
         "type": "vcs",
+        "url": "https://github.com/pattern-lab/drupal-twig-extensions"
+      },
+      {
+        "type": "vcs",
         "url": "https://github.com/drupal-pattern-lab/styleguidekit-twig-default",
         "no-api": true
       }
@@ -50,7 +54,8 @@
       "twig/twig": "^1.35.0",
       "cweagans/composer-patches": "~1.0",
       "pattern-lab/core": "^2.8.10",
-      "pattern-lab/patternengine-twig": "^2.1.3",
+      "pattern-lab/drupal-twig-extensions": "^0.1.0",
+      "pattern-lab/patternengine-twig": "^2.2.0",
       "pattern-lab/styleguidekit-twig-default": "^3.0.0",
       "pattern-lab/styleguidekit-assets-default": "*",
       "evanlovely/plugin-twig-namespaces": "dev-master",
