Setting up BoltCoreTwig Extensions and replacing get_data

--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -51,6 +51,7 @@ lineageMatchKey: 3
 patternExtension: twig
 twigExtensions:
     - '\PatternLab\DrupalTwigExtensions\Basic'
+    - '\Bolt\TwigExtensions\BoltCore'
 twigDebug: true
 twigAutoescape: false
 twigDefaultDateFormat: ''
