Putting the polish on Bolt Core PHP; now have two Twig Extension: Core and Extras

--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -52,6 +52,7 @@ patternExtension: twig
 twigExtensions:
     - '\PatternLab\DrupalTwigExtensions\Basic'
     - '\Bolt\TwigExtensions\BoltCore'
+    - '\Bolt\TwigExtensions\BoltExtras'
 twigDebug: true
 twigAutoescape: false
 twigDefaultDateFormat: ''
