--- a/packages/core-php/composer.json
+++ b/packages/core-php/composer.json
@@ -18,8 +18,8 @@
     }
   },
   "require": {
-    "justinrainbow/json-schema": "^5.2",
-    "symfony/yaml": "^3.3",
-    "twig/twig": "^1.0"
+    "twig/twig": "^1.0",
+    "basaltinc/twig-tools": "^1.1.0",
+    "michelf/php-markdown": "^1.8.0"
   }
 }
