--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -49,6 +49,10 @@ lineageMatch: >-
   |\()[&quot;\&#039;]([\/.@A-Za-z0-9-_]+)[&quot;\&#039;]([\s\S+]*?)%}
 lineageMatchKey: 3
 patternExtension: twig
+twigExtensions:
+    - '\PatternLab\DrupalTwigExtensions\Basic'
+    - '\Bolt\TwigExtensions\BoltCore'
+    - '\Bolt\TwigExtensions\BoltExtras'
 twigDebug: true
 twigAutoescape: false
 twigDefaultDateFormat: ''
